Never use kioexec for mailto URIs

Some mail clients (e.g. Thunderbird) don't have x-scheme-handler/mailto in their .desktop file and would otherwise trigger kioexec.

BUG: 440062